@@ -15,7 +15,7 @@ public class Consts {
     /**
      * Version
      */
-    public static final String VERSION = "0.82";
+    public static final String VERSION = "0.83 beta";
 
     /**
      * verze a jmeno programu
