@@ -1,6 +1,6 @@
 #don't translate following Application.*, exclude .title and .description
 Application.id = FRD
-Application.version = 0.82
+Application.version = 0.83 beta
 Application.title = FreeRapid Downloader ${Application.version} by Vity
 Application.vendor = Vity
 Application.vendorId = VitySoft
