@@ -1,7 +1,7 @@
 # wersja pl 14.12.2009 - Soft4U Admin
 
 Application.id = FRD
-Application.version = 0.82
+Application.version = 0.83 beta
 Application.title = FreeRapid Downloader ${Application.version} - Vity&team 2009
 Application.vendor = Vity
 Application.vendorId = VitySoft
