@@ -1,9 +1,9 @@
 handlers=java.util.logging.FileHandler, java.util.logging.ConsoleHandler
-.level=WARNING
+.level=CONFIG
 
-java.util.logging.ConsoleHandler.level=WARNING
+java.util.logging.ConsoleHandler.level=CONFIG
 java.util.logging.ConsoleHandler.formatter=cz.vity.freerapid.utilities.LogFormatter
-java.util.logging.FileHandler.level=WARNING
+java.util.logging.FileHandler.level=CONFIG
 java.util.logging.FileHandler.pattern=app.log
 java.util.logging.FileHandler.count=1
 java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
